path en relative

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
       </div>
     </header>
 	<div id="carrousel">
-        <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/66-north-7BRSiUskeUw-unsplash.jpg">
-  			<img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/fezbot2000-S43Xq2IefyU-unsplash.jpg">
-  			<img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/rahul-pandit-HHaIRbgzcGw-unsplash.jpg">
-  			<img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/ray-hennessy-nI4OwVnz0dw-unsplash.jpg">
-  			<img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/luke-porter-yvNhHBFVesc-unsplash.jpg">
-  			<img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/bela-bako-EMx_ih9FTwI-unsplash.jpg">
+        <img src="Images/66-north-7BRSiUskeUw-unsplash.jpg">
+  			<img src="Images/fezbot2000-S43Xq2IefyU-unsplash.jpg">
+  			<img src="Images/rahul-pandit-HHaIRbgzcGw-unsplash.jpg">
+  			<img src="Images/ray-hennessy-nI4OwVnz0dw-unsplash.jpg">
+  			<img src="Images/luke-porter-yvNhHBFVesc-unsplash.jpg">
+  			<img src="Images/bela-bako-EMx_ih9FTwI-unsplash.jpg">
   </div>
     <div class="controls"> 
         <button class="prev">Précedent</button> 
         <button class="next">Suivant</button>
     </div>
       <div id="miniatures">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/66-north-7BRSiUskeUw-unsplash.jpg">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/fezbot2000-S43Xq2IefyU-unsplash.jpg">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/rahul-pandit-HHaIRbgzcGw-unsplash.jpg">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/ray-hennessy-nI4OwVnz0dw-unsplash.jpg">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/luke-porter-yvNhHBFVesc-unsplash.jpg">
-                  <img src="file:///C:/Users/Utilisateur/Documents/Exercices%20Simplon/Carrousel%20Javascript/Images/bela-bako-EMx_ih9FTwI-unsplash.jpg">
+                  <img src="Images/66-north-7BRSiUskeUw-unsplash.jpg">
+                  <img src="Images/fezbot2000-S43Xq2IefyU-unsplash.jpg">
+                  <img src="Images/rahul-pandit-HHaIRbgzcGw-unsplash.jpg">
+                  <img src="Images/ray-hennessy-nI4OwVnz0dw-unsplash.jpg">
+                  <img src="Images/luke-porter-yvNhHBFVesc-unsplash.jpg">
+                  <img src="Images/bela-bako-EMx_ih9FTwI-unsplash.jpg">
       </div>
 </body>
 
@@ -44,7 +44,7 @@
 <footer>
     <div class="textfooter">
           Photos : <a href="http://www.unsplash.com">Unsplash</a><br>
-          Code : <a href="https://github.com/Knitpurlcode/Knitpurlcode.github.io">Knitpurlcode</a> 2020
+          Code : <a href="https://github.com/Knitpurlcode/">Knitpurlcode</a> 2020
     </div> 
 </footer>
 
