--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
                   <img src="Images/luke-porter-yvNhHBFVesc-unsplash.jpg">
                   <img src="Images/bela-bako-EMx_ih9FTwI-unsplash.jpg">
       </div>
-</body>
-
-
 <footer>
     <div class="textfooter">
-          Photos : <a href="http://www.unsplash.com">Unsplash</a><br>
-          Code : <a href="https://github.com/Knitpurlcode/">Knitpurlcode</a> 2020
+          <h6>Photos : <a href="http://www.unsplash.com">Unsplash</a><br>
+          Code : <a href="https://github.com/Knitpurlcode/">Knitpurlcode</a> 2020</h6>
     </div> 
-</footer>
+</footer></body>
+
+
 
 </html>
